--- a/src/BlazorWinFormsApp/wwwroot/index.html
+++ b/src/BlazorWinFormsApp/wwwroot/index.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Blazor Winform app</title>
+    <title>Winform app</title>
     <base href="/" />
-    <link href="_content/WebviewAppShared/ifcjs/viewer-styles.css" rel="stylesheet" />
-    <script src="_content/WebviewAppShared/ifcjs/bundle.js"></script>
-
+    <link href="_content/WebviewAppShared/ifcjs/styles.css" rel="stylesheet" />
 </head>
 
 <body>
